--- a/app/views/static_pages/shipping_payment.erb
+++ b/app/views/static_pages/shipping_payment.erb
@@ -1,8 +1,25 @@
-<br><br><br>
+<html>
+<header>
+  <style>
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+  </style>
+</header>
+<body>
+<br><br><br><br>
+
 <h1>Оплата и Доставка</h1>
 <button style="background-position:center; position: center", class="with-delay">
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
+<br><br>
+<div class="about_us">
+<p>Для того, чтобы сделать заказ в нашем интернет-магазине, достаточно связаться с нами по указанным на сайте телефонам.</p>
 <p>
   Мы осуществляем доставку товаров нашего сайта по всей Украине, через Новую Почту
 </p>
@@ -10,3 +27,6 @@
 <p>
   Опалата осуществялется наложным платежем или через начисления денег на карту Приватбанка
 </p>
+</div>
+</body>
+</html>
