--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -228,8 +228,8 @@
   </div>
   <div class="contacts">
     <h3>Контакты</h3>
-    <p>+38(095) 067-48-23</p>
-    <p>Александр</p>
+    <h3>+38(095) 067-48-23</h3>
+    <h1 style="color:whitesmoke">Александр</h1>
 
     <h3>Поделиться</h3>
     <a href="https://www.facebook.com/Underwear-196240304295770/"><img src="assets/facebook.png" alt="facebook"></a>
