--- a/app/views/static_pages/men.html.erb
+++ b/app/views/static_pages/men.html.erb
@@ -74,7 +74,7 @@
     <h4>code: 1056</h4>
   </div>
 
-  <!--39 -->
+  <!-- -->
   <div class="men_underwear">
     <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_black_1078_M_L_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Черный Цвет и на Размеры: M-L -> Цена - 100грн
@@ -128,6 +128,151 @@
     <h3>80 грн</h3>
     <h4>code: 4475</h4>
   </div>
+
+  <!--52 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_dark_blue_4462_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Темно-Синий Цвет -> Цена - 120грн
+    <br>
+    code: 4462
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_dark_blue_4462_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 4462</h4>
+  </div>
+
+  <!--53 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_black_white_4469_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Черный и Белый Цвет -> Цена - 120грн
+    <br>
+    code: 4469
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_black_white_4469_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 4469</h4>
+  </div>
+
+  <!--54 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_bright_blue_4471_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Ярко-Синий -> Цена - 120грн
+    <br>
+    code: 4471
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_bright_blue_4471_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 4471</h4>
+  </div>
+
+  <!--55 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_dark_blue_grey_1082_100_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Темно-Синий -> Цена - 100грн<br>
+    На Серый Цвет -> Цена - 120грн
+    <br>
+    code: 1082
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_dark_blue_grey_1082_100_120grn.png" alt="photo"/></a>
+    <h3>100 грн</h3>
+    <h4>code: 1082</h4>
+  </div>
+
+  <!--56 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1085_blue_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       На Голубой Цвет -> Цена - 120грн
+    <br>
+    code: 1085
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1085_blue_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 1085</h4>
+  </div>
+
+  <!--57 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1087_red_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       На Красный Цвет -> Цена - 120грн
+    <br>
+    code: 1087
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1087_red_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 1087</h4>
+  </div>
+
+  <!--58 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1088_yellow_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       На Желтый Цвет -> Цена - 120грн
+    <br>
+    code: 1088
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1088_yellow_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 1088</h4>
+  </div>
+
+  <!--59 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1089_red_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       На Красный Цвет -> Цена - 120грн
+    <br>
+    code: 1089
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1089_red_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 1089</h4>
+  </div>
+
+  <!--60 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1091_black_dark_grey_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       На Чёрный и Темно-Синий Цвет -> Цена - 120грн
+    <br>
+    code: 1091
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1091_black_dark_grey_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 1091</h4>
+  </div>
+
+  <!--60 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1096_red_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       На Чёрный и Темно-Синий Цвет -> Цена - 85 грн
+    <br>
+    code: 1096
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1096_red_85grn.png" alt="photo"/></a>
+    <h3>85 грн</h3>
+    <h4>code: 1096</h4>
+  </div>
+
+  <!--61 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1099_dark_grey_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       На Темно-Серый -> Цена - 85 грн
+    <br>
+    code: 1099
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1099_dark_grey_85grn.png" alt="photo"/></a>
+    <h3>85 грн</h3>
+    <h4>code: 1099</h4>
+  </div>
+
+  <!--62 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1054_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       Цена - 80 грн
+    <br>
+    code: 1054
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1054_80grn.png" alt="photo"/></a>
+    <h3>80 грн</h3>
+    <h4>code: 1054</h4>
+  </div>
+
+  <!--63 -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1070_75grn.png" data-fancybox="gallery" data-fancybox data-caption="
+       Цена - 75 грн
+    <br>
+    code: 1070
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_1070_75grn.png" alt="photo"/></a>
+    <h3>75 грн</h3>
+    <h4>code: 1070</h4>
+  </div>
+
 
 </div>
 
