--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -107,16 +107,14 @@
     <h4>code: 2015</h4>
   </div>
 
-  <div class="women_t_shirts">
-    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2018_White_3XL_100__2XXL_95grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Белый Цвет и На Размер: 2XXL -> Цена - 95грн
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_8049_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 64грн
     <br>
-    На Белый Цвет и На Размер: 3XL -> Цена - 100грн
-    <br>
-    code: 2018
-			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2018_White_3XL_100__2XXL_95grn.png" alt="photo"/></a>
-    <h3>95 грн</h3>
-    <h4>code: 2018</h4>
+    code: 8049
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_8049_S_M_L_XL_64grn.png" alt="photo"/></a>
+    <h3>64 грн</h3>
+    <h4>code: 8049</h4>
   </div>
 
   <div class="women_t_shirts">
