--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -13,34 +13,24 @@
   </style>
 </header>
 <body>
+<div class="about_us">
+  <h1>О Нас</h1>
 
-
-<br><br><br>
-<h1>О Нас</h1>
 <br>
 <button style="background-position:center; position: center", class="with-delay">
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
 
-<br><br>
 <div class="about_us">
-  <p class="">
-    Мы рады приветствовать вас на сайте нижнего белья (https://ievtushenko.herokuapp.com).</p>
-  <p>Наша компания предлагает высококачественное бельё известных турецких брендов, таких как  Berrak, Pink secre , и др.</p>
-  <p>Эти компании известны тем, кто любит простую, стильную и удобную одежду. Заводы по производству белья находится в Стамбуле.</p>
-  <p> Популярность нашего магазина вполне объяснима несколькими факторами:
-    сырьё для изготовления отличается высоким качеством. Для работы отбирается только высококачественный хлопок, который чешется модальными гребенками.</p>
-  <p>Это дает возможность сделать текстиль мягким и нежным на ощупь.
-    в качестве красителей используются натуральные компоненты.</p>
-  <p>Все синтетические карсители имеют сертификаты качества и соответствуют стандартам безопасности.</p>
-  <p> Дизайн домашней одежды разрабатывается с учетом с учетом нескольких факторов – простота, стиль и следование модным тенденциям.</p>
-  <p>Приемлемые цены на весь представленный в каталоге ассортимент - это следствие поставок товаров напрямую с фабрики изготовителей.</p>
-  <p> Приемлемые цены на весь представленный в каталоге.</p>
-  <p> Приветливые и квалифицированные менеджеры готовы Вам помочь сделать выбор и оформить заказ.</p>
-  <p> Мы регулярно проводим акции и скидки поэтому очень внимательно следите за новостями на сайте магазина, так как Вы можете получить реальную возможность сэкономить Ваши денежные средства.</p>
+  <p> Мы предлагает высококачественное бельё известных турецких брендов, таких как  Berrak, Pink secret , и др.</p>
+  <p> Эти компании известны тем, кто любит простую, стильную и удобную одежду. Фирмы по производству белья находится в Стамбуле.</p>
+  <p> Сырьё для изготовления отличается высоким качеством. Для работы отбирается только высококачественный хлопок, который чешется модальными гребенками. Это дает возможность сделать текстиль мягким и нежным на ощупь.
+  в качестве красителей используются натуральные компоненты. Все синтетические карсители имеют сертификаты качества и соответствуют стандартам безопасности.
+  Дизайн домашней одежды разрабатывается с учетом с учетом нескольких факторов – простота, стиль и следование модным тенденциям.</p>
+  <p> Приемлемые цены на весь представленный в каталоге ассортимент - это следствие поставок товаров напрямую с фабрики изготовителей.</p>
   <p> Если Вам нужно красивое бельё высокого качества от проверенных брендов, обращайтесь к нам - и вы получите отличную продукцию в кратчайшие сроки на выгодных для Вас условиях.</p>
-  <p> Желаем Вам приятных и удачных покупок.
-  </p>
+  <p>Желаем Вам приятных и удачных покупок.</p>
+</div>
 </div>
 </body>
 </html>
