--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,32 @@
-<br><br><br>
+<!DOCTYPE html>
+<html>
+<header>
+  <style>
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+  </style>
+</header>
+<body>
+<div class="about_us">
+
 <h1>Вопросы и ответы</h1>
-<button style="background-position:center; position: center", class="with-delay">
-  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
-</button>
+  <br>
+  <button style="background-position:center; position: center", class="with-delay">
+    <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
+  </button>
+  <br>
+<br>
+<div class="about_us">
 <p>
   На этой странице будут размещаться вопросы и ответы для наших посетителей
 </p>
+
+</div >
+</div>
+</body>
+</html>
