--- a/app/views/static_pages/howtobuy.html.erb
+++ b/app/views/static_pages/howtobuy.html.erb
@@ -1,8 +1,29 @@
-<br><br><br>
+<!DOCTYPE html>
+<html>
+<header>
+  <style>
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+  </style>
+</header>
+<body>
+
+<div class="about_us">
 <h1>Как купить нашу продукцию?</h1>
+<br>
 <button style="background-position:center; position: center", class="with-delay">
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
-<p>
-  На этой странице будут размещаться информация, о том, как преобрести нашу продукцию нижнего белья
-</p>
+
+<div class="about_us">
+  <p>Для того, чтобы сделать заказ в нашем интернет-магазине, достаточно связаться с нами по указанным на сайте телефонам.</p>
+  <p>Опалата осуществялется наложным платежем или через начисления денег на карту Приватбанка</p>
+</div>
+</div>
+</body>
+</html>
