--- a/app/views/static_pages/shipping_payment.erb
+++ b/app/views/static_pages/shipping_payment.erb
@@ -11,22 +11,25 @@
   </style>
 </header>
 <body>
-<br><br><br><br>
 
+<div class="about_us">
 <h1>Оплата и Доставка</h1>
+  <br>
 <button style="background-position:center; position: center", class="with-delay">
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
 <br><br>
 <div class="about_us">
-<p>Для того, чтобы сделать заказ в нашем интернет-магазине, достаточно связаться с нами по указанным на сайте телефонам.</p>
+<p>Интернет-магазин "https://ievtushenko.herokuapp.com" осуществляет доставку товарв по всей Украине.</p>
 <p>
-  Мы осуществляем доставку товаров нашего сайта по всей Украине, через Новую Почту
+  Для того, чтобы сделать заказ в нашем интернет-магазине, достаточно заполнить форму онлайн-заказа или связаться с менеджерами по указанным на сайте телефонам.
 </p>
+  <br>
 
-<p>
-  Опалата осуществялется наложным платежем или через начисления денег на карту Приватбанка
-</p>
+  <h3 style="text-align: center;">Условия доставки по Украине.</h3>
+  <br>
+  <p>Доставка товаров по Украине осуществляется в течении 1-2 дней, через отделения Новой почты, Укрпочты, Интайм, Деливери, и т д. Узнать точное время и условия доставки в ваш город, вы можете у оператора нашего контакт-центра.</p>
+</div>
 </div>
 </body>
 </html>
