--- a/app/views/static_pages/women_t_shirts.html.erb
+++ b/app/views/static_pages/women_t_shirts.html.erb
@@ -99,7 +99,7 @@
   </div>
 
   <!--36  -->
-  <div class="men_underwear">
+  <div class="women_t_shirts">
     <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_2131_S_M_L_XL_73grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 73грн
     <br>
@@ -110,7 +110,7 @@
   </div>
 
   <!--37  -->
-  <div class="men_underwear">
+  <div class="women_t_shirts">
     <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_8049_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 64грн
     <br>
