--- a/app/views/static_pages/womens_underwear.html.erb
+++ b/app/views/static_pages/womens_underwear.html.erb
@@ -1,6 +1,6 @@
 <br><br><br><br>
 <%# @for_women.each do |for_woman| %>
-<h1>Женские Белье</h1>
+<h1>Женское Белье</h1>
 <br>
 <button style="background-position:center; position: center;", class="with-delay">
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
