--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Tesel</title>
-</head>
+<html>
+<header>
+  <style>
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+  </style>
+</header>
 <body>
-<br><br><br><br>
+<div class="about_us">
 <h1>Наши Контакты</h1>
+  <br>
 <button style="background-position:center; position: center", class="with-delay">
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
 <br>
-
+  <div class="about_us">
 <br><br>
 <h3>Где нас можно найти?</h3><br>
 <p>Г. Одесса, промрынок "7 км", ул Престижная, 455.</p>
 <h3 style="text-align: center;">+38(095) 067-48-23</h3><br>
-<h3 style="text-align: center;">Александр</h3>
+<h1 style="text-align: center;">Александр</h1>
 <br><br>
-
-<div id="googlemaps" style="width-max:1920px;wid-min:600; height:500px;background:yellow; position: center"></div>
-<div>
-<!--<script>-->
-<!--//   function myMap() {-->
-<!--//       var mapOptions = {-->
-<!--//           center: new google.maps.LatLng(46.442, 30.65),-->
-<!--//           zoom: 16,-->
-<!--//           mapTypeId: google.maps.MapTypeId.HYBRID-->
-<!--//       }-->
-<!--//       var map = new google.maps.Map(document.getElementById("map"), mapOptions);-->
-<!--//   }-->
-<!--</script>-->
-
-<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBN_BcT9zj8l80ABl1GIrJ8jZM1zESf9hk&callback=myMap"></script>-->
+  </div>
 </div>
+<div id="googlemaps" style="width-max:1920px;wid-min:600; height:500px;background:yellow; position: center"></div>
+
 <script src="js/jquery.js" type="text/javascript"></script>
 <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBN_BcT9zj8l80ABl1GIrJ8jZM1zESf9hk&callback=initMap">
 </script>
-
-
-
- <!--// To use this code on your website, get a free API key from Google.// Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp-->
-
 </body>
 </html>
