--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,7 +22,7 @@
 
 
 <!--Слайдер///////////////////////////////////////-->
-<br>
+<br> <br><br><br>
 <div class="slider">
   <div class="slide">
     <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Carousel/Home_image1.png" alt="slide1">
@@ -107,7 +107,7 @@
     <h4>code: 2015</h4>
   </div>
 
-  <div class="men_underwear">
+  <div class="women_t_shirts">
     <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_8049_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 64грн
     <br>
