--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #81c1f7;
+  background-color: white;
   color: #333;
   //margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
@@ -24,7 +24,7 @@ a {
   color: #000;
 
   &:visited {
-    color: #86b9dd;
+    color: #0a395a;
   }
 
   &:hover {
