--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -17,9 +17,9 @@
   <h1>О Нас</h1>
 
 <br>
-<button style="background-position:center; position: center", class="with-delay">
-  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
-</button>
+<!--<button style="background-position:center; position: center", class="with-delay">-->
+  <!--<%#= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>-->
+<!--</button>-->
 
 <div class="about_us">
   <p> Мы предлагает высококачественное бельё известных турецких брендов, таких как  Berrak, Pink secret , и др.</p>
