--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
       margin: auto;
     }
     a:hover {
-      color: #dada22;
+      color: #0c0c0c;
     }
 
   </style>
@@ -75,7 +75,7 @@
   </div>
 
 </div>
-<hr>
+
 
 <!--Женские Майки///-->
 <br> <br>
@@ -129,8 +129,9 @@
   </div>
 
 </div>
-<hr>
+
   <!--Мужское белье///-->
+<br> <br>
 <h1><%= link_to "Мужское белье", men_path %></h1>
 <br>
 <div class="catalog">
@@ -167,9 +168,9 @@
 </div>
   <br>
 
-<hr>
-<!--Мужское белье///-->
 
+<!--Мужское белье///-->
+<br> <br>
 <h1><%= link_to "Женское Белье", womens_underwear_path %></h1>
 <br>
 <div class="catalog">
@@ -213,10 +214,10 @@
     <h4>code: 11259</h4>
   </div>
 </div>
-<br>
+
 <!--Footer///////////////////////////////////////////////////////////-->
-<br><br>
-</br>
+
+
 <footer>
   <div class="service">
     <h3>Где нас можно найти?</h3>
