--- a/app/views/static_pages/men.html.erb
+++ b/app/views/static_pages/men.html.erb
@@ -1,11 +1,19 @@
-<br><br><br><br>
+<!DOCTYPE html>
+<html>
+<header>
+  <style>
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+  </style>
+</header>
+<body>
+<div class="about_us">
 <h1>Мужское Белье</h1>
-
-
-<button style="background-position:center; position: center", class="with-delay">
-  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
-</button>
-
 
 <br>
 <div class="catalog">
@@ -301,3 +309,7 @@
   <!--&lt;!&ndash;<%#= link_to 'Создать Новое', new_for_man_path, class: "btn btn-mini btn-warning", type: "button"%>&ndash;&gt;-->
 <!--&lt;!&ndash;</div>&ndash;&gt;-->
 <!--<br>-->
+
+</div>
+</body>
+</html>
