--- a/app/views/static_pages/women_t_shirts.html.erb
+++ b/app/views/static_pages/women_t_shirts.html.erb
@@ -1,10 +1,21 @@
-<br><br><br><br>
+<!DOCTYPE html>
+<html>
+<header>
+  <style>
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+  </style>
+</header>
+<body>
+<div class="about_us">
 <%# @for_women.each do |for_woman| %>
 <h1>Женские Майки</h1>
-<br>
-<button style="background-position:center; position: center;", class="with-delay">
-  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
-</button>
+
 
 
 <br>
@@ -121,5 +132,6 @@
   </div>
 
 </div>
-
-<br>
+</div>
+</body>
+</html>
