--- a/app/views/static_pages/womens_underwear.html.erb
+++ b/app/views/static_pages/womens_underwear.html.erb
@@ -1,11 +1,20 @@
-<br><br><br><br>
+<!DOCTYPE html>
+<html>
+<header>
+  <style>
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+  </style>
+</header>
+<body>
+<div class="about_us">
 <%# @for_women.each do |for_woman| %>
 <h1>Женское Белье</h1>
-<br>
-<button style="background-position:center; position: center;", class="with-delay">
-  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
-</button>
-
 
 <br>
 <div class="catalog">
@@ -153,39 +162,6 @@
     <h4>code: 2313</h4>
   </div>
 
-<!--14-->
-  <!--<div class="men_underwear">-->
-    <!--<a href="assets/Women_underwear_4405_Bright_blue_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
-    <!--На Ярко Синий Цвет и на Размеры: S-M-L-XL -> Цена - 90грн-->
-    <!--<br>-->
-    <!--code: 4405-->
-			<!--"><img src="assets/Women_underwear_4405_Bright_blue_S_XL_90grn.png" alt="photo"/></a>-->
-    <!--<h3>90 грн</h3>-->
-    <!--<h4>code: 4405</h4>-->
-  <!--</div>-->
-
-<!--15-->
-  <!--<div class="men_underwear">-->
-    <!--<a href="assets/Women_underwear_4406_black_S_M_L_XL_75grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
-    <!--На Черный Цвет и на Размеры: S-M-L-XL -> Цена - 70грн-->
-    <!--<br>-->
-    <!--code: 4406-->
-			<!--"><img src="assets/Women_underwear_4406_black_S_XL_75grn.png" alt="photo"/></a>-->
-    <!--<h3>70 грн</h3>-->
-    <!--<h4>code: 4406</h4>-->
-  <!--</div>-->
-
-<!--16  -->
-  <!--<div class="men_underwear">-->
-    <!--<a href="assets/Women_underwear_1113_grey_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
-    <!--На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 70грн-->
-    <!--<br>-->
-    <!--code: 1113-->
-			<!--"><img src="assets/Women_underwear_1113_grey_S_XL_90grn.png" alt="photo"/></a>-->
-    <!--<h3>90 грн</h3>-->
-    <!--<h4>code: 1113</h4>-->
-  <!--</div>-->
-
 <!--17  -->
   <div class="men_underwear">
     <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11143_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
@@ -273,17 +249,6 @@
     <h3>25 грн</h3>
     <h4>code: 11223</h4>
   </div>
-
-<!--25  -->
-  <!--<div class="men_underwear">-->
-    <!--<a href="assets/Women_underwear_11224_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
-    <!--На Размеры: M-L -> Цена - 25грн-->
-    <!--<br>-->
-    <!--code: 11224-->
-			<!--"><img src="assets/Women_underwear_11224_L_M_25grn.png" alt="photo"/></a>-->
-    <!--<h3>100 грн</h3>-->
-    <!--<h4>code: 11224</h4>-->
-  <!--</div>-->
 
 <!--26  -->
     <div class="men_underwear">
@@ -373,19 +338,6 @@
     <h4>code: 11249</h4>
   </div>
 
-<!--&lt;!&ndash;41 &ndash;&gt;-->
-  <!--<div class="men_underwear">-->
-    <!--<a href="assets/Women_underwear_rose_2016_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
-    <!--На Цвет Розы и на Размеры: S-M-L-XL -> Цена - 50грн-->
-    <!--<br>-->
-    <!--code: 2016-->
-			<!--"><img src="assets/Women_underwear_rose_2016_S_M_L_XL_50grn.png" alt="photo"/></a>-->
-    <!--<h3>50 грн</h3>-->
-    <!--<h4>code: 2016</h4>-->
-  <!--</div>-->
-
-
-
 <!--45 -->
   <div class="men_underwear">
     <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11184_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
@@ -430,18 +382,7 @@
     <h4>code: 11193</h4>
   </div>
 
-<!--&lt;!&ndash;49 &ndash;&gt;-->
-  <!--<div class="men_underwear">-->
-    <!--<a href="assets/Women_underwear_11265_M_L_40grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
-    <!--На Размеры: M-L -> Цена - 40грн-->
-    <!--<br>-->
-    <!--code: 11265-->
-			<!--"><img src="assets/Women_underwear_11265_M_L_40grn.png" alt="photo"/></a>-->
-    <!--<h3>40 грн</h3>-->
-    <!--<h4>code: 11265</h4>-->
-  <!--</div>-->
-
-
 </div>
-
-<br>
+</div>
+</body>
+</html>
