--- a/app/views/static_pages/women.html.erb
+++ b/app/views/static_pages/women.html.erb
@@ -1,10 +1,22 @@
-<br><br><br><br>
+<!DOCTYPE html>
+<html>
+<header>
+  <style>
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+  </style>
+</header>
+<body>
+<div class="about_us">
 <%# @for_women.each do |for_woman| %>
 <h1>Женское Пижамы</h1>
 <br>
-<button style="background-position:center; position: center;", class="with-delay">
-<%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
-</button>
+
 
 
 <br>
@@ -174,8 +186,6 @@
     <h4>code: 3041</h4>
   </div>
 
-
-
 </div>
 
 
@@ -210,4 +220,6 @@
 <!--<div style="background-position:center; position: center", class="with-delay">-->
   <!--<%#= link_to 'Создать Новое', new_for_woman_path, class: "btn btn-mini btn-warning", type: "button"%>-->
 <!--</div>-->
-<br>
+</div>
+</body>
+</html>
