--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: #0f95d23b;
   color: #333;
   //margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
