--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,13 @@
     a:hover {
       color: #0c0c0c;
     }
-
+    .about_us{
+      padding-left: 90px;
+      padding-right: 90px;
+      font-family: "PT Sans";
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
   </style>
 </head>
 
@@ -44,7 +50,7 @@
 <!--Мужское и Женское///////////////////////////////////////-->
 <!--Женские Пижамы///-->
 <br> <br>
-
+<div class="about_us">
 
 <h1><%= link_to "Женские Пижамы", women_path, id: "schlafanzug"%></h1>
 <br>
@@ -129,7 +135,7 @@
   </div>
 
 </div>
-
+</div>
   <!--Мужское белье///-->
 <br> <br>
 <h1><%= link_to "Мужское белье", men_path %></h1>
