--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1533,7 +1533,7 @@ header {
   width: 100%;
   max-width: 1920px;
   min-width: 950px;
-  background-color:black;//#cae458;
+  background-color: #222;
   margin: 0 auto;
   min-height: 58px;
   text-align: center;
